--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -3,10 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     display: grid;
     grid-template-rows: auto 1fr auto;
-    min-height: 100vh; /* Ensure body takes full viewport height */
+    min-height: 100vh;
+    /* Ensure body takes full viewport height */
 }
 
 .header-content {
@@ -14,6 +16,7 @@ body {
     color: white;
     padding: 30px;
 }
+
 nav ul {
     list-style-type: none;
     display: flex;
@@ -22,23 +25,28 @@ nav ul {
     background-color: black;
     padding: 15px;
 }
+
 nav ul a {
     text-decoration: none;
     color: white;
 }
+
 nav ul a:hover {
     background-color: #575757;
     border-radius: 5px;
-    padding: 2px;
+    padding: 15px;
 }
+
 .content {
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 20px;
 }
+
 main {
     background-color: #eee;
 }
+
 footer {
     background-color: #333;
     color: white;
