--- a/styles/base.css
+++ b/styles/base.css
@@ -48,6 +48,7 @@ main {
     display: grid;
     grid-template-columns: 2fr 1fr;
     padding: 10px;
+    max-width: 100%;
 }
 
 .card {
@@ -81,16 +82,27 @@ h3 {
     padding-top: 15px;
 }
 
+.line {
+    width: 80%;
+    margin: 5px auto;
+}
+
 .country-content {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    gap: 20px;
+    gap: 15px;
     padding: 20px;
 }
 
-.flag {
+.flag-container {
     align-content: center;
     margin: 5px;
+}
+
+.flag-name {
+    font-style: italic;
+    font-size: small;
+    padding: 5px;
 }
 
 .resource-link {
@@ -107,4 +119,9 @@ footer {
     color: white;
     padding: 15px;
     text-align: center;
+}
+
+.last-modified {
+    color: #ACEB98;
+    font-size: small;
 }
